Added distribution management and pom dependencies.